--- a/css/custom.css
+++ b/css/custom.css
@@ -26,3 +26,5 @@
 h1.no-caps, h2.no-caps, h3.no-caps, h4.no-caps, h5.no-caps, h6.no-caps {
     text-transform: none;
 }
+
+.reveal section img.no-border { background:none; border:none; box-shadow:none; }
